--- a/main.css
+++ b/main.css
@@ -1,7 +1,21 @@
 
 @media (max-width: 666px) {
     body{margin:0;padding:0;background-color:#0b1b3f;font-family:Arial,sans-serif}
-.module{background:url(background.png) no-repeat center/100% auto;background-attachment:fixed;background-position:center top 50px;overflow:hidden;width: 100%; height: 100%; position: relative;}
+.module {
+  position: relative;
+  overflow: hidden;
+}
+
+.module::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(background.png) no-repeat center/cover fixed;
+  z-index: -1;
+}
 header{background-color:transparent;padding:10px;display:flex;align-items:center;justify-content:space-between}
 .logo{width:60px}
 .logo img{width:100%}
